--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "dev": "nodemon server/app.js -w server/app.js -w src",
         "build": "tsc && vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "tailwind": "npx tailwindcss -i ./src/index.css -o ./dist/output.css --watch --poll"
     },
     "dependencies": {
         "@tanstack/react-query": "^5.28.8",
